// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RouteWithLayout basic 1`] = `
<div>
  <div
    class="main"
    data-layout="default"
  >
    <div>
      Main nav
    </div>
    <div
      class="main"
    >
      <div>
        <div>
          sidenav
        </div>
      </div>
      <div
        class="StyledProps--font StyledProps--main bottomContainer"
      >
        <div
          class="titleContainer"
        >
          <div
            class="Layout--vertical StyledProps--main"
          >
            <p
              class="StyledProps--font StyledProps--main subTitle"
            >
              SUBTITLE
            </p>
            <p
              class="StyledProps--font StyledProps--main title StyledProps--color StyledProps--color-white"
            >
              TITLE
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      class="rhs"
    >
      <div
        class="children"
      >
        <div>
          matched-route
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`RouteWithLayout empty 1`] = `
<div>
  <div
    class="main"
    data-layout="empty"
  >
    <div
      class="children"
    >
      <div>
        matched-route
      </div>
    </div>
  </div>
</div>
`;

exports[`RouteWithLayout minimal 1`] = `
<div>
  <div
    class="main"
    data-layout="minimal"
  >
    <div>
      Main nav
    </div>
    <div
      class="rhs"
    >
      <div
        class="children"
      >
        <div>
          matched-route
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`RouteWithLayout that the license store will render the child if the license value is not present 1`] = `
<div>
  <div
    class="main"
    data-layout="default"
  >
    <div>
      Main nav
    </div>
    <div
      class="main"
    >
      <div>
        <div>
          sidenav
        </div>
      </div>
      <div
        class="StyledProps--font StyledProps--main bottomContainer"
      >
        <div
          class="titleContainer"
        >
          <div
            class="Layout--vertical StyledProps--main"
          >
            <p
              class="StyledProps--font StyledProps--main subTitle"
            >
              SUBTITLE
            </p>
            <p
              class="StyledProps--font StyledProps--main title StyledProps--color StyledProps--color-white"
            >
              TITLE
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      class="rhs"
    >
      <div
        class="children"
      >
        <div>
          matched-route
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`RouteWithLayout that the license store will route to the CF trial page if the license has not started 1`] = `
<div>
  <div>
    <h1>
      Not Found
    </h1>
    <div
      data-testid="location"
    >
      /account/123/cf/home/trial
    </div>
  </div>
</div>
`;

exports[`RouteWithLayout that the license store will route to the CI trial page if the license has not started 1`] = `
<div>
  <div>
    <h1>
      Not Found
    </h1>
    <div
      data-testid="location"
    >
      /account/123/ci/home/trial
    </div>
  </div>
</div>
`;

exports[`RouteWithLayout that the license store will route to the subscriptions page if the trial is expired 1`] = `
<div>
  <div
    class="main"
    data-layout="default"
  >
    <div>
      Main nav
    </div>
    <div
      class="main"
    >
      <div />
      <div
        class="StyledProps--font StyledProps--main bottomContainer"
      >
        <div
          class="titleContainer"
        >
          <div
            class="Layout--vertical StyledProps--main"
          />
        </div>
      </div>
    </div>
    <div
      class="rhs"
    >
      <div
        class="children"
      >
        <div>
          matched-route
        </div>
      </div>
    </div>
  </div>
</div>
`;
